data/derived/fa15/progs/unify/prog0076.ml.out
Characters 344-398:
  | SquareAv(a,b) -> (eval(a,x,y)*.eval(a,x,y) +. eval(b,x,y)*.eval(b,x,y)) / 2.0
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
